# babaIsYou

./: README.md
Remise Console/console/babaIsYou/: .ninja_log  CMakeLists.txt  baba.cpp  boardview.h  box.cpp  connector.cpp  connector.h  game.cpp  grass.h  iobserver.h  lava.cpp  main.cpp  movecommand.cpp  movecommand.h  movecommandnoposition.h  position.h  push.cpp  textobject.cpp  textobject.h  win.h
Remise Console/console/babaIsYou/.qt/: QtDeploySupport.cmake
Remise Console/console/babaIsYou/.qtc_clangd/: compile_commands.json
Remise Console/console/babaIsYou/file/: .ninja_deps  .ninja_log  build.ninja
Remise Console/console/babaIsYou/file/.qt/: QtDeploySupport.cmake
Remise Console/console/babaIsYou/file/.qtc_clangd/: compile_commands.json
Remise Metier/subdir/metier/: .ninja_deps  .ninja_log  BoardView.h  CMakeLists.txt  Connector.h  Controller.h  Effect.h  Game.h  IObserver.h  ObjectManager.h  ObjectState.h  Player.h  Rule.h  build.ninja
Remise Metier/subdir/metier/.qtc_clangd/: compile_commands.json
Remise Metier/subdir/metier/metier/: Box.h  CMakeCache.txt.prev  CMakeLists.txt  Direction.h  Element.h  FileManager.h  GameObject.h  ISubject.h  Material.h  Position.h  RuleComposant.h  RuleConnector.h  RuleEffect.h  RuleElement.h
babaIsYouGraphique/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CMakeLists.txt  Doxyfile  baba.h  best.h  boardview.cpp  box.cpp  build.ninja  command.cpp  command.h  composant.h  effect.h  element.cpp  element.h  filemanager.cpp  filemanager.h  flag.cpp  game.cpp  gamecomponent.cpp  goop.cpp  goop.h  grass.cpp  grass.h  info.txt  iobserver.cpp  irule.h  is.h  isbest.cpp  iskill.cpp  iskill.h  issink.cpp  isstop.h  isubject.cpp  isubject.h  iswin.h  isyou.cpp  isyou.h  kill.h  (+20 more)
babaIsYouGraphique/.qt/: QtDeploySupport.cmake
babaIsYouGraphique/.qtc_clangd/.cache/clangd/index/: alloc_traits.h.E9BA17BEE07A2BAA.idx  allocated_ptr.h.95627CC6742827C3.idx  allocator.h.93BF9A1F82F6688C.idx  auto_ptr.h.1589B15250F603E2.idx  best.cpp.B3F6C633893E60F1.idx  best.h.592C4E1D98AB3AB5.idx  bit.FA145B867C105A18.idx  boardview.cpp.9E61C48C36607DF4.idx  boardview.h.86E74776D84F348E.idx  box.cpp.5A8E6D9E24B1F792.idx  box.h.A2DA2135ABC126F5.idx  command.h.DB26B8578F265624.idx  compare.196B3574262582AD.idx  composant.cpp.B579CF928B6564AC.idx  connector.cpp.A38906398F234585.idx  connector.h.1B5888381763250D.idx  controller.cpp.6485F7C15BF148DF.idx  controller.h.C20D046F157C26F6.idx  direction.cpp.6E43135EF039C71C.idx  effect.cpp.77CAAA9DFE6CAE29.idx  effect.h.C8B4BD1D55775B32.idx  element.cpp.39B18146B4CC6F73.idx  exception.h.6347ADACB335B5B2.idx  filemanager.cpp.384753F4B43EA44E.idx  filemanager.h.AAA1FBC76DFCD88F.idx  fs_path.h.70A56D965B55DCEC.idx  fstream.943A6DA4699FF8D1.idx  fstream.tcc.5CE579CBE0529742.idx  gamecomponent.h.F651BCC7DEFEE015.idx  hashtable.h.2122BA1A87DDCE40.idx  hashtable_policy.h.721E14586A5D8388.idx  iobserver.h.B5D3AC473EF352C3.idx  irule.h.5214883D949F3266.idx  is.cpp.1A1E7587F27833A7.idx  is.h.63AF88A7FE47F6AA.idx  isbest.cpp.CD2441526AD68F58.idx  isbest.h.AF27FEC8193EBAB6.idx  iskill.cpp.68623470B833DA40.idx  iskill.h.2FBE7452913EEA8A.idx  ispush.cpp.4EEDF6146850C926.idx  (+68 more)
babaIsYouGraphique/babaIsYouGraphique_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
babaIsYouGraphique/tests/: baba.cpp  baba.h  best.cpp  boardview.cpp  box.h  composant.cpp  composant.h  connector.h  direction.cpp  direction.h  effect.cpp  element.h  filemanager.cpp  filemanager.h  game.cpp  game.h  gamecomponent.cpp  gamecomponent.h  goop.cpp  goop.h  grass.cpp  grass.h  irule.cpp  irule.h  is.cpp  is.h  isbest.h  ispush.cpp  ispush.h  issink.h  isstop.cpp  iswin.cpp  isyou.cpp  kill.cpp  managedata.cpp  managedata.h  movecommand.cpp  movecommand.h  position.cpp  position.h  (+9 more)
babaIsYouGraphique/tests/.qtc_clangd/: compile_commands.json
babaIsYouGraphique/tests/.qtc_clangd/.cache/clangd/index/: baba.cpp.99B048D9BAF49A1A.idx  baba.h.9850C54AEE846598.idx  bessel_function.tcc.F4D1EEEA8259DA3B.idx  best.cpp.987BC613EBF822A3.idx  best.h.7E5AB17C5BE52534.idx  beta_function.tcc.5B375847E4658250.idx  bit.FA145B867C105A18.idx  boardview.cpp.6987C508EEDDCF35.idx  boardview.h.9D14888A9494C0D6.idx  box.cpp.A35F69F0E7A9254B.idx  box.h.41AB694FE5DE7D56.idx  catch.hpp.4D80A827EE37C377.idx  catch2.hpp.3BAC496B6F3E48ED.idx  cmath.A0A08F382EA62983.idx  command.h.D11B1123369D28CD.idx  composant.cpp.CF958BE68D532D17.idx  composant.h.D7EE28BA23CDEAE7.idx  connector.cpp.B67EC41D35317676.idx  connector.h.7CD10E62AFD54F25.idx  controller.cpp.569F4732385D9D7E.idx  controller.h.E9E4FAE27E0B51FA.idx  cstddef.6685BE0C46EA418C.idx  debugapi.h.543D529424F51793.idx  direction.cpp.BD62C06D346C41AC.idx  direction.h.8FAE97B901DFFBEB.idx  effect.cpp.CFD70D4276ED2ECD.idx  effect.h.38C45F4E0BFA13C4.idx  element.cpp.029ECF90C33614E9.idx  element.h.4F5724D6C0135BD2.idx  ell_integral.tcc.50F5CBA6850ED7C6.idx  exception.h.6347ADACB335B5B2.idx  exp_integral.tcc.60FCA382E9E1B598.idx  filemanager.cpp.AAF27CE4BAC9BD2B.idx  filemanager.h.5F74EC32B6CB0BA2.idx  flag.cpp.047984C96143A7E1.idx  flag.h.5AE96093DBB277D4.idx  fstream.943A6DA4699FF8D1.idx  fstream.tcc.5CE579CBE0529742.idx  game.cpp.EC19D62082CDBADF.idx  game.h.A5DE5789CA7DD3D8.idx  (+84 more)
babaIsYouGraphique/tests/file/: save.txt
(+346 files in other folders)
